deploymentfile/backend/onlineshop-backend-deployment.yaml
####################################################
#  OnlineShop BackEnd Deployment
####################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlineshop-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onlineshop-backend
  template:
    metadata:
      labels:
        app: onlineshop-backend
    spec:
      containers:
        - name: onlineshop-backend
          image: adithilokhande/onlinebookshopbackend:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"  
          ports:
            - containerPort: 8181
              protocol: TCP
      terminationGracePeriodSeconds: 30

---
####################################################
# OnlineShop Backend Service
####################################################
apiVersion: v1
kind: Service
metadata:
  name: onlineshop-backend

spec:
  ports:
    - port: 8181
      protocol: TCP
      targetPort: 8181
  selector:
    app: onlineshop-backend
  type: ClusterIP
