deploymentfile/backend/onlineshop-backend-gateway.yaml
#######################################################
# OnlineShop Backend Gateway
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlineshop-backend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
#######################################################
# OnlineShop Backend Virtual Service Account
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onlineshop-backend-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - onlineshop-backend-gateway
  http:
  - match:
    - uri:
        prefix: /onlineshop/books
    - uri:
        prefix: /h2-console
    route:
    - destination:
        host: onlineshop-backend
        port:
          number: 8181

#---
